@@ -18,6 +18,35 @@
 
 package com.mucommander.ui.viewer.text;
 
+import hu.pagavcs.mug.MugHelper;
+
+import java.awt.Toolkit;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.awt.event.KeyEvent;
+import java.io.BufferedInputStream;
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.Reader;
+import java.io.Writer;
+import java.nio.charset.Charset;
+
+import javax.swing.JFrame;
+import javax.swing.JMenu;
+import javax.swing.JMenuBar;
+import javax.swing.JMenuItem;
+import javax.swing.JSeparator;
+import javax.swing.JTextArea;
+import javax.swing.KeyStroke;
+import javax.swing.event.DocumentListener;
+import javax.swing.text.BadLocationException;
+import javax.swing.text.Document;
+
 import com.mucommander.file.AbstractFile;
 import com.mucommander.file.FileOperation;
 import com.mucommander.io.EncodingDetector;
@@ -32,19 +61,12 @@ import com.mucommander.ui.encoding.EncodingListener;
 import com.mucommander.ui.encoding.EncodingMenu;
 import com.mucommander.ui.helper.MenuToolkit;
 import com.mucommander.ui.helper.MnemonicHelper;
-import com.mucommander.ui.theme.*;
+import com.mucommander.ui.theme.ColorChangedEvent;
+import com.mucommander.ui.theme.FontChangedEvent;
+import com.mucommander.ui.theme.Theme;
+import com.mucommander.ui.theme.ThemeListener;
+import com.mucommander.ui.theme.ThemeManager;
 import com.mucommander.ui.viewer.EditorFrame;
-
-import javax.swing.*;
-import javax.swing.event.DocumentListener;
-import javax.swing.text.BadLocationException;
-import javax.swing.text.Document;
-import java.awt.Toolkit;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.KeyEvent;
-import java.io.*;
-import java.nio.charset.Charset;
 
 /**
  * Text editor implementation used by {@link TextViewer} and {@link TextEditor}.
@@ -94,6 +116,8 @@ class TextEditorImpl implements ThemeListener, ActionListener, EncodingListener 
         textArea.setSelectedTextColor(ThemeManager.getCurrentColor(Theme.EDITOR_SELECTED_FOREGROUND_COLOR));
         textArea.setSelectionColor(ThemeManager.getCurrentColor(Theme.EDITOR_SELECTED_BACKGROUND_COLOR));
         textArea.setFont(ThemeManager.getCurrentFont(Theme.EDITOR_FONT));
+
+		MugHelper.addPopupMenu(textArea);
     }
 
 
@@ -206,6 +230,8 @@ class TextEditorImpl implements ThemeListener, ActionListener, EncodingListener 
                 in = file.getInputStream();
             }
 
+			in = new BufferedInputStream(in, 1024 * 128);
+
             // Load the file into the text area
             loadDocument(in, encoding);
         }
@@ -230,8 +256,7 @@ class TextEditorImpl implements ThemeListener, ActionListener, EncodingListener 
             in = new BOMInputStream(in);
             bom = ((BOMInputStream)in).getBOM();
         }
-
-        Reader isr = new BufferedReader(new InputStreamReader(in, encoding));
+		Reader isr = new BufferedReader(new InputStreamReader(in, encoding));
 
         // Feed the file's contents to text area
         textArea.read(isr, null);
