@@ -1,0 +1,104 @@
+package hu.pagavcs.mug;
+
+import java.awt.event.ActionEvent;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
+
+import javax.swing.AbstractAction;
+import javax.swing.JComponent;
+import javax.swing.JPopupMenu;
+import javax.swing.text.JTextComponent;
+
+public class MugHelper {
+
+	public static void addPopupMenu(JTextComponent component) {
+		JPopupMenu contextMenu = new JPopupMenu();
+		contextMenu.add(new CutAction(component));
+		contextMenu.add(new CopyAction(component));
+		contextMenu.add(new PasteAction(component));
+		addPopupMenu(component, contextMenu);
+	}
+
+	public static void addPopupMenu(JComponent component, final JPopupMenu contextMenu) {
+
+		component.addMouseListener(new MouseAdapter() {
+
+			public void mousePressed(MouseEvent e) {
+				maybeShowPopup(e);
+			}
+
+			public void mouseReleased(MouseEvent e) {
+				maybeShowPopup(e);
+			}
+
+			private void maybeShowPopup(MouseEvent e) {
+				if (e.isPopupTrigger()) {
+					contextMenu.show(e.getComponent(), e.getX(), e.getY());
+				}
+			}
+		});
+	}
+
+	private static class CopyAction extends AbstractAction {
+
+		private final JTextComponent target;
+
+		public CopyAction(JTextComponent target) {
+			super("Copy");
+			this.target = target;
+		}
+
+		public void actionPerformed(ActionEvent e) {
+			boolean deselectAfterCopy = false;
+			if ((target.getSelectedText() == null)) {
+				target.selectAll();
+				deselectAfterCopy = true;
+			}
+			target.copy();
+			if (deselectAfterCopy) {
+				target.select(0, 0);
+			}
+		}
+	}
+
+	private static class CutAction extends AbstractAction {
+
+		private final JTextComponent target;
+
+		public CutAction(JTextComponent target) {
+			super("Cut");
+			this.target = target;
+		}
+
+		public void actionPerformed(ActionEvent e) {
+			boolean deselectAfterCopy = false;
+			if (target.getSelectedText() == null) {
+				target.selectAll();
+				deselectAfterCopy = true;
+			}
+			if (target.isEditable()) {
+				target.cut();
+			} else {
+				target.copy();
+			}
+
+			if (deselectAfterCopy) {
+				target.select(0, 0);
+			}
+		}
+	}
+
+	private static class PasteAction extends AbstractAction {
+
+		private final JTextComponent target;
+
+		public PasteAction(JTextComponent target) {
+			super("Paste");
+			this.target = target;
+		}
+
+		public void actionPerformed(ActionEvent e) {
+			target.paste();
+		}
+	}
+}
